force-app/main/default/objects/Inhabitant__c/Inhabitant__c.object-meta.xml
<CustomObject>
    <label>Inhabitant</label>
    <nameField>
        <label>Inhabitant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inhabitants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>