force-app/main/default/objects/Inhabitant__c/fields/First_and_Last_name__c.field-meta.xml
<CustomField>
    <fullName>First_and_Last_name__c</fullName>
    <label>First and Last name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inhabitants</relationshipLabel>
    <relationshipName>Inhabitants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>