force-app/main/default/objects/Inhabitant__c/fields/Inhabitant_Number__c.field-meta.xml
<CustomField>
    <fullName>Inhabitant_Number__c</fullName>
    <displayFormat>I-{0000}</displayFormat>
    <label>Inhabitant Number</label>
    <type>AutoNumber</type>
</CustomField>