force-app/main/default/objects/Inhabitant__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Inhabitants (Mailing Address)</relationshipLabel>
    <relationshipName>Inhabitants1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>